Registry for ResultSetLang